Added more objects docs

--- a/index.html
+++ b/index.html
@@ -484,6 +484,16 @@ _::isBoolean(0); // false</pre>
 _::isDate('2011-06-09 01:02:03'); // false
 _::isDate(new DateTime); // true</pre>
 
+<p class="block" id="isNaN"><b class="function">isNaN</b> <code>_::isNaN(object)</code></p>
+<p>Returns true if value is NaN</p>
+<pre>_::isNaN(null); false
+_::isNaN(acos(8));</pre>
+
+<p class="block" id="isNull"><b class="function">isNull</b> <code>_::isNull(object)</code></p>
+<p>Returns true if value is null</p>
+<pre>_::isNull(null); // true
+_::isNull(false); // false</pre>
+
     <h2>Author</h2>
     <p>Brian Haveri <a href="https://github.com/brianhaveri/">GitHub</a>, <a href="http://twitter.com/brianhaveri">@brianhaveri</a></p>
     
