Fixed typo in docs

--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@ _::isDate(new DateTime); // true</pre>
 
 <p class="block" id="isNaN"><b class="function">isNaN</b> <code>_::isNaN(object)</code></p>
 <p>Returns true if value is NaN</p>
-<pre>_::isNaN(null); false
-_::isNaN(acos(8));</pre>
+<pre>_::isNaN(null); // false
+_::isNaN(acos(8)); // true</pre>
 
 <p class="block" id="isNull"><b class="function">isNull</b> <code>_::isNull(object)</code></p>
 <p>Returns true if value is null</p>
